<resources>
    <string name="app_name">ReportsApp</string>
    <string name="welcome">Welcome!</string>
    <string name="appname">ReportsApp</string>
    <string name="login">Sign in</string>
    <string name="Resgitar">Sign up</string>
    <string name="titleNotes">Notes</string>
    <string name="password">Password</string>
    <string name="addnote">Add Note</string>
    <string name="titulo">Title</string>
    <string name="descricao">Description</string>
    <string name="UpdateNote">Edit</string>
    <string name="title_activity_maps">Map</string>
    <string name="sharedPref" translatable="false" />
    <string name="userlogged">Login Successful</string>
    <string name="emptyField">Empty Field</string>
    <string name="EmailEmpty">Email Empty</string>
    <string name="PassEmpty">Password Empty</string>
    <string name="BadLogin">Email or Password Wrong!</string>
    <string name="BadResgister">Register Error!</string>
    <string name="signup">Sign Up</string>
    <string name="CreateReport">Create Report</string>
    <string name="userloc" translatable="false" />
    <string name="userloclat" translatable="false" />
    <string name="userloclng" translatable="false" />
    <string name="criarReport">Create Report</string>


    <string name="obras">Contruction</string>
    <string name="Buraco">Hole</string>
    <string name="Fuga">Water Leak</string>
    <string name="CameraErro">Unable to open camera</string>
    <string name="TitleEmpty">Title Empty</string>
    <string name="descEmpty">Description Empty</string>
    <string name="BadCreate">Error Creating Report</string>
    <string name="eliminar">Delete</string>
    <string name="edit">Edit</string>
    <string name="falhaimg">Erro loading Image</string>
    <string name="noedit">Can\'t Edit this Report</string>
    <string name="editado">Sucessful Edit !</string>
    <string name="eliminado">Deleted!</string>
    <string name="baddelete">Can\'t delete!</string>
    <string name="constructions">Constructions</string>
    <string name="hole">Hole</string>
    <string name="waterlake">Water Leake</string>
    <string name="all">All Reports</string>
    <string name="km">5 KM</string>
    <string name="kms">2 KM</string>

    <string-array name="tipos">
        <item>@string/obras</item>
        <item>@string/Buraco</item>
        <item>@string/Fuga</item>
    </string-array>


</resources>