<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Notes">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/cone"
            tools:ignore="VectorDrawableCompat"></ImageView>


        <TextView
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"

            android:layout_below="@+id/header_title"
            android:gravity="left"
            android:text="@string/login"
            android:textSize="28sp"
            android:textStyle="normal"

            />
        <EditText
            android:id="@+id/Email"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_below="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="91dp"
            android:hint="E-mail"
            />
        <EditText
            android:id="@+id/Password"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_below="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

        <Button
            android:text="@string/login"
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@+id/Password"
            android:layout_marginTop="14dp"
            android:background="@color/white"

            android:onClick="login"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

        <Button
            android:id="@+id/ResgisterBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@+id/loginBtn"
            android:layout_marginTop="14dp"
            android:text="@string/Resgitar"
            android:onClick="btnRegistar"
            android:textColor="@color/black"
            app:iconTint="@android:color/secondary_text_light" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ResgisterBtn"
            android:layout_marginTop="14dp"
            android:background="@color/white"

            android:onClick="btnnotes"
            android:src="@drawable/ic_baseline_notes_24" />


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>